--- a/recette_gateau.css
+++ b/recette_gateau.css
@@ -8,11 +8,11 @@ body {
     margin: 0;
 }
 
+/* For mobile device: */
 div.contenu {
     background-color: white;
-    margin : 60px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 350px;
+    margin : 40px 8px 40px 8px;
+    padding: 0px 8px 20px 8px;
     box-shadow: 0px 0px 10px 10px gray;
     overflow: visible;
 }
@@ -70,17 +70,17 @@ table.info {
     width:100%;
     color:white;
     background-color:#6C829DC0;
-    height: 70px
+    height: 50px
 }
 
 table.info td {
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     vertical-align: top;
 }
 
 table.info th {
-    font-size: 16px;
+    font-size: 14px;
     vertical-align: bottom;
     padding-bottom: 8px;
 }
@@ -94,7 +94,7 @@ img.info {
 }
 
 div.colonne {
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
     overflow: visible;
 }
@@ -119,13 +119,8 @@ div.colonne1 p {
 
 div.colonne1 {
     display: inline-block;
-    margin-right: 10%;
 }
 
-div.colonne2 {
-    float: right;
-
-}
 
 table.preparation p.numero {
     background-color: #6C829D;
@@ -159,4 +154,45 @@ table.preparation tr {
 }
 
 
+/* For desktop computer: */
+@media only screen and (min-width: 768px) {
+    div.contenu {
+        margin : 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+        min-width: 350px;
+    }
 
+    table.info {
+        height: 80px
+    }
+
+    table.info td {
+        font-size: 14px;
+    }
+
+    table.info th {
+        font-size: 16px;
+    }
+
+    div.colonne {
+        width: 45%;
+    }
+
+    div.colonne1 {
+        margin-right: 10%;
+    }
+
+    div.colonne2 {
+        float: right;
+    }
+
+    }
+
+@media only screen and (min-width: 900px) {
+    div.contenu {
+        margin-left: auto;
+        margin-right: auto;
+        width: 645px;
+    }
+
+    }
